# icfpc-2020

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  test.sh
app/: Cargo.toml
app/src/: main.rs
common/: Cargo.toml
common/src/: asm.pest  code.rs  encoder.rs  game.rs  lib.rs  parser.rs  proto.rs  send.rs  vm.rs
common/src/proto/: galaxy.rs
common/src/vm/: interpret.rs
common/src/vm/interpret/: tests.rs
common/src/vm/interpret/tests/: car.rs  cdr.rs  cons.rs  dec.rs  div.rs  draw.rs  encoder.rs  env.rs  eq.rs  if_zero.rs  inc.rs  interact.rs  is_nil.rs  list.rs  lt.rs  modem.rs  mul.rs  neg.rs  nil.rs  op_b.rs  op_c.rs  op_false.rs  op_i.rs  op_s.rs  op_true.rs  sum.rs  various.rs
galaxy/: Cargo.toml
galaxy-run/: Cargo.toml
galaxy-run/src/: main.rs
galaxy-ui/: Cargo.toml
galaxy-ui/src/: controls.rs  geom.rs  kdtree.rs  main.rs  main_screen.rs  map.rs
galaxy/src/: main.rs
matrix-bruteforce/: Cargo.toml
matrix-bruteforce/src/: main.rs
