[package]
name = "galaxy-ui"
version = "0.2.0"
authors = ["skobochka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

rstar = "0.8"
log = "0.4"
chrono = "0.4"
env_logger = "0.5"
lazy_static = "1.4"
rand = "0.7"
futures = "0.3"
tokio = "0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
